--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -35,7 +35,7 @@ Phobos~\cite{Leveson:1995}.
 Основной сложностью таких алгоритмов является обеспечение синхронизации между потоками и корректным использованием разделяемых ресурсов.
 В связи с этим появляются новые типы ошибок, характерные только для параллельно исполняемого кода. 
 
-Основными классами ошибок в параллельных программах являются состояния гонок и состояния взаимных блокировок.
+Основными классами ошибок в параллельных программах являются состояния гонки и состояния взаимных блокировок.
 В общем случае состоянием гонки называют ситуацию, при которой поведение программы зависит от порядка или времени выполнения некоторых неконтролируемых событий.
 Важное уточнение заключается в том, что такое выполнение не всегда является ошибкой.
 Проблемы возникают тогда, когда разработчик не предусматривает некоторое из возможных поведений программы.
